# inventory

./: .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml  requirements.txt
backend/app/: auth.py  crud.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: auth.py  customers.py  orders.py  products.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Navbar.jsx  ThemeToggle.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Customers.jsx  Dashboard.jsx  Login.jsx  Orders.jsx  Products.jsx
frontend/src/services/: api.js
