[project]
name = "inventory-backend"
version = "1.0.0"
description = "Inventory & Order Management System Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pydantic[email]>=2.0.0",
    "python-dotenv>=1.0.0",
]
